<resources>
    <string name="app_name">Fruits et Légumes</string>
    <string name="memory">Memory</string>
    <string name="association">Association</string>
    <string name="bonjour">Bonjour</string>
    <string name="commencer"> Go ! </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">C\'est parti !</string>
    <string name="whoru">Qui es-tu ?</string>
    <string name="prenom">Prénom :</string>
    <string name="name">name</string>
    <string name="avatar">Avatar</string>
    <string name="character_selection">Avec qui veux-tu jouer?</string>
    <string name="admin">Admin ?</string>
    <string name="passAdminInfo">Entrez votre mot de passe admin</string>
    <string name="valider">Valider</string>
    <string name="passAdminVerif" />
    <string name="nombre_de_coups">Nombre de coups</string>
    <string name="temps">Temps</string>
    <string name="niveau">Niveau</string>
    <string name="jeu">Jeu</string>
    <string name="pr_nom">Prénom</string>
    <string name="date">Date</string>
    <string name="level1">Niveau 1</string>
    <string name="level2">Niveau 2</string>
    <string name="level3">Niveau 3</string>
    <string name="unlockLevels">Débloquer les niveaux?</string>
    <string name="results">Résultats</string>
    <string name="encyclopedie">Encyclopédie</string>
    <string name="fruit_arbre">string/arbre</string>
    <string name="fruit_plein">plein</string>
    <string name="bravo">Bravo !</string>
    <string name="levels">Levels</string>
    <string name="home">Home</string>
    <string name="next">Next</string>
    <string name="replay">Replay</string>
    <string name="fruit_coupe">fruit_coupe</string>
    <string name="fruit_graine">fruit_graine</string>
    <string name="fruit_plein_path">fruit_plein_</string>
    <string name="fruit_coupe_path">fruit_coupe_</string>
    <string name="fruit_arbre_path">fruit_arbre_</string>
    <string name="fruit_graine_path">fruit_graine_</string>
    <string name="legume_path">legume_</string>
    <string name="graines">Graines</string>
    <string name="plantes">Plantes</string>
    <string name="coupes">Fruits coupés</string>
</resources>
