<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="0dp"
    tools:context=".association.ResultFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="660dp"
        app:srcCompat="@drawable/tableau_resultat2"
        android:id="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/results" />


    <TextView
        android:text="@string/bravo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:textSize="80sp"
        android:fontFamily="casual"
        tools:layout_editor_absoluteY="70dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginTop="49dp"
        tools:textStyle="bold"
        android:layout_alignTop="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ver_mince"
        android:id="@+id/imageView4"
        android:layout_marginRight="37dp"
        android:layout_marginEnd="37dp"
        android:layout_below="@+id/buttonReplay"
        android:layout_alignRight="@+id/textView9"
        android:layout_alignEnd="@+id/textView9"
        android:layout_marginTop="21dp"
        android:contentDescription="@string/avatar" />

    <ImageButton
        android:text="@string/levels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/level"
        android:id="@+id/buttonLevelSelection"
        android:background="@android:color/transparent"
        android:layout_marginBottom="57dp"
        android:layout_marginLeft="120dp"
        android:layout_marginStart="120dp"
        android:layout_alignBottom="@+id/imageView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/levels" />

    <ImageButton
        android:text="@string/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonHome"
        app:srcCompat="@drawable/home1"
        android:background="@android:color/transparent"

        android:layout_above="@+id/imageView4"
        android:layout_alignRight="@+id/buttonLevelSelection"
        android:layout_alignEnd="@+id/buttonLevelSelection"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/home" />

    <ImageButton
        android:text="@string/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/next1"
        android:background="@android:color/transparent"
        android:onClick="nextLevel"
        android:id="@+id/buttonNextLevel"
        android:layout_marginRight="132dp"
        android:layout_marginEnd="132dp"
        android:layout_alignBottom="@+id/imageView4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="33dp"
        android:contentDescription="@string/next" />

    <ImageButton
        android:text="@string/replay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="replayLevel"
        android:id="@+id/buttonReplay"
        app:layout_constraintRight_toRightOf="@+id/imageView"
        app:srcCompat="@drawable/replay1"
        android:background="@android:color/transparent"
        android:layout_marginTop="90dp"
        android:layout_alignTop="@+id/textView9"
        android:layout_alignLeft="@+id/buttonNextLevel"
        android:layout_alignStart="@+id/buttonNextLevel"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp"
        android:contentDescription="@string/replay" />

</RelativeLayout>
