<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_admin_results"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kagura.project.com.a8.admin.AdminSession">

    <TextView
        android:text="@string/niveau"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView5"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/nombre_de_coups"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView5"
        android:layout_toRightOf="@+id/textView5"
        android:layout_toEndOf="@+id/textView5"
        android:layout_marginLeft="181dp"
        android:layout_marginStart="181dp"
        android:id="@+id/textView6"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/temps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="97dp"
        android:layout_marginEnd="97dp"
        android:id="@+id/textView7"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/jeu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_marginRight="156dp"
        android:layout_marginEnd="156dp"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/textView5"
        android:layout_toStartOf="@+id/textView5"
        android:textStyle="normal|bold" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listResults"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="33dp" />

    <TextView
        android:text="@string/prenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textStyle="normal|bold"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/textView4"
        android:layout_toStartOf="@+id/textView4"
        android:layout_marginRight="128dp"
        android:layout_marginEnd="128dp" />

    <TextView
        android:text="@string/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/listResults"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="48dp"
        android:layout_marginStart="48dp"
        android:id="@+id/textView8"
        android:textStyle="normal|bold" />

    <TextView
        android:text="TextView"
        android:textColor="#000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/listResults"
        android:layout_alignParentRight="true"
        android:clickable="true"
        android:onClick="deleteAll"
        android:layout_alignParentEnd="true"
        android:id="@+id/trashcan"
        android:textSize="18sp" />
</RelativeLayout>
