<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_foret"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="kagura.project.com.a8.CharacterSelectionFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:text="@string/start"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:id="@+id/buttonStart"
        app:srcCompat="@drawable/ico"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:onClick="start"
        android:layout_marginBottom="48dp" />

    <TextView
        android:text="@string/whoru"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/whoru"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="14dp"
        android:textSize="43sp" />


    <EditText
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/name"
        android:textSize="50dp"
        android:fontFamily="casual"
        app:layout_constraintBottom_toTopOf="@+id/character_selection"
        android:layout_marginBottom="40dp"
        app:layout_constraintLeft_toRightOf="@+id/nameIndicator" />

    <TextView
        android:text="@string/character_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/character_selection"
        android:layout_marginTop="176dp"
        app:layout_constraintTop_toBottomOf="@+id/whoru"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="45sp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ver_gros"
        android:id="@+id/buttonVerGros"
        android:onClick="CharacterOnClick"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@+id/character_selection"
        android:layout_marginStart="336dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="336dp"
        android:layout_marginTop="40dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ver_mince"
        android:id="@+id/buttonVerMince"
        android:onClick="CharacterOnClick"
        android:layout_marginStart="88dp"
        app:layout_constraintLeft_toRightOf="@+id/buttonVerGros"
        android:background="@android:color/transparent"
        android:layout_marginLeft="88dp"
        app:layout_constraintTop_toTopOf="@+id/character_selection"
        android:layout_marginTop="88dp" />

    <TextView
        android:text="@string/prenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nameIndicator"
        app:layout_constraintRight_toLeftOf="@+id/whoru"
        app:layout_constraintBottom_toTopOf="@+id/character_selection"
        android:layout_marginBottom="64dp"
        android:textSize="40sp" />

    <Button
        android:text="@string/admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonAdmin"
        android:onClick="adminSession"
        app:layout_constraintTop_toBottomOf="@+id/whoru"
        app:layout_constraintRight_toLeftOf="@+id/nameIndicator"
        android:layout_marginEnd="208dp"
        android:layout_marginRight="208dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <ImageView
        android:layout_width="110dp"
        android:layout_height="144dp"
        app:srcCompat="@drawable/main"
        android:id="@+id/imageView3"
        android:rotation="-40"
        app:layout_constraintBottom_toTopOf="@+id/buttonVerMince"
        android:layout_marginBottom="56dp"
        app:layout_constraintRight_toRightOf="@+id/name" />


</android.support.constraint.ConstraintLayout>
